FEATURE: UI   | Added Connected Time item to peers view [Nolar]
FEATURE: UI   | Option to add torrent downloads silently (without activating main Azureus window) [Nolar]
FEATURE: UI   | Added download speed limit column to MyTorrents [Parg]
FEATURE: Core | Added ability to apply updates and shutdown Azureus instead of restarting [Parg]

CHANGE: Core | Support azureus.install.path parameter, used by new linux launcher script [Nolar]
CHANGE: UI   | Create torrent wizard now initially defaults torrent save path from "save to" default [Parg]
CHANGE: Core | Moved config items for tracker client overrides + UDP to tracker client config [Parg]
CHANGE: UI   | Obey "start stopped" config item for dropped torrents [Parg]
CHANGE: UI   | Torrents no longer need to be stopped before removal is allowed [Nolar]
CHANGE: UI   | Graphical view item refresh optimizations [Nolar]
CHANGE: Core | Also do dynamic tracker re-announce interval overrides when seeding; uses peer count only [Nolar]
CHANGE: Core | NAT check url changed to aelitis server [Nolar]
CHANGE: Core | Reduce tracker re-announce interval when incoming connections are accepted (unfirewalled) [Nolar]
CHANGE: Core | Remove old auto-migration code [Nolar]
CHANGE: Core | Update restart logic now preserves JVM max mem setting for Sun JVMs [Parg]

BUGFIX: Core | Fix for kernel panics under MacOSX [ej32206, Nolar]
BUGFIX: UI   | Old language files in user dir causing !missing! item texts [Nolar]
BUGFIX: UI   | Fix for window state not being remembered between sessions [Nolar]
BUGFIX: UI   | Fix for messages window being closed while animated [Gudy]
BUGFIX: UI   | Fix for BUG 1059432 : Download bars spawning multiple times when set to auto open [Gudy]
BUGFIX: UI   | Fix for BUG 1061538 : /0 error if no pieces [Parg]
BUGFIX: Core | Handle passing of torrents to already running but not fully initialised process better [Parg]
BUGFIX: UI   | Fix create-torrent wizard to remember paths properly [Parg]