@@ -1325,5 +1325,6 @@ ConfigView.section.interface.display.add_torrents_silently=Add torrents silently
 ConfigView.section.interface.display.add_torrents_silently.tooltip=Add torrent downloads without activating main Azureus window.
 MyTorrentsView.maxdownspeed=Max Down Speed
 MyTorrentsView.maxdownspeed.info=Max Download Speed per torrent
+ConfigView.section.tracker.passwordwebhttpsonly=Only allow access via HTTPS
 
 #PLEASE LEAVE ME AT VERY BOTTOM!
