@@ -223,9 +223,9 @@ public class ConfigView extends AbstractIView {
                                          new ConfigSectionIPFilter(azureus_core),
                                          new ConfigSectionStats(),
                                          new ConfigSectionTracker(azureus_core),
-                                         new ConfigSectionTrackerServer(azureus_core),
                                          new ConfigSectionTrackerClient(),
-										 new ConfigSectionSecurity(),
+                                         new ConfigSectionTrackerServer(azureus_core),
+ 										 new ConfigSectionSecurity(),
                                          new ConfigSectionSharing(),
                                          new ConfigSectionLogging()
                                         };
